# ESP32-Cam

./: README.md
CameraServerTest/: MDBT53_ESP32CAM_PROTOCOL.md
CameraServerTest/Arduino/CameraServerTest/: CameraServerTest.ino
CameraServerTest/Arduino/ESP32CAM_SerialCam/: ESP32CAM_SerialCam.ino
CameraServerTest/MDBT53/: CMakeLists.txt  nrf52833dk_nrf52833.overlay  prj.conf
CameraServerTest/MDBT53/Arduino_nRF52/: MDBT53_CameraController.ino
CameraServerTest/MDBT53/src/: main.c
CameraServerTest/Raspberry/: rpi_server.py
